--- a/assignmentxblock/templates/components/submit_project.html
+++ b/assignmentxblock/templates/components/submit_project.html
@@ -81,7 +81,11 @@
 
                     <input type='checkbox' />
 
-                    <p>{% trans "I have read Funix's definition of <a href='#'>plagiarism</a>, and I declare that this is my own work." %}</p>
+                    <p>
+                        {% blocktrans%}
+                        I have read Funix's definition of <a href='{{PLAGIARISM_POLICY_URL}}'>plagiarism</a>, and I declare that this is my own work.
+                        {% endblocktrans %}
+                    </p>
                 </label>
             </li>
             <li class='term-item'>
@@ -115,7 +119,11 @@
 
                     <input type='checkbox' />
 
-                    <p>{% trans "I understand that Funix regularly checks submissions for copyright infringement and violations of the Funix Student Code of Conduct, and failure to comply with the <a href='#'>Funix Honor Code</a> may result in to cancel my subscription." %}</p>
+                    <p>
+                        {% blocktrans%}
+                            I understand that Funix regularly checks submissions for copyright infringement and violations of the Funix Student Code of Conduct, and failure to comply with the <a href='{{FUNIX_HONOR_CODE_URL}}'>Funix Honor Code</a> may result in to cancel my subscription.
+                        {% endblocktrans %}
+                    </p>
                 </label>
             </li>
         </ul>
