ui: change download submission btn; translation; remove unused code

--- a/assignmentxblock/templates/components/submission_history.html
+++ b/assignmentxblock/templates/components/submission_history.html
@@ -4,7 +4,7 @@
 
     <h2 class='lpx-heading-1'>{% trans 'Project submission history' %}</h2>
 
-    <p id='submission-history-label' class='lpx-mb-1'>{% trans "Select another submitted project" %}</p>
+    <p id='submission-history-label' class='lpx-mb-1'>{% trans "Select a project" %}</p>
     
     <div id='submission_history'></div>
 </div>
