--- a/assignmentxblock/static/css/assignmentxblock.css
+++ b/assignmentxblock/static/css/assignmentxblock.css
@@ -442,6 +442,16 @@
   display: flex;
   align-items: center;
   gap: 8px;
+  width: 100%;
+}
+
+#submission-status-bar-title .download-btn {
+  flex: 1;
+  text-align: right;
+}
+
+#submission-status-bar-title .download-btn a {
+  text-decoration: none;
 }
 
 #submission-status-bar.not_graded {
